--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">uulmLogin</string>
-    <string name="app_version">0.5</string>
+    <string name="app_version">0.6</string>
     <string name="capo_uri">https://welcome.uni-ulm.de/capo/</string>
     <string name="ip_prefix">134.60.</string>
+    <string name="ssid">welcome</string>
 </resources>
